<resources>
    <!-- Application -->
    <string name="app_name">Gee Notes</string>
    <string name="menu_divider">|</string>

    <!-- Main activity -->
    <string name="action_settings">Settings</string>
    <string name="button_add_note">Add a new notebook</string>
    <string name="notebooks_list_label">Notebooks</string>
    <string name="notebooks_list_context_delete">Delete</string>
    <string name="notebooks_list_context_rename">Rename</string>

    <!-- NoteBook delete confirmation -->
    <string name="notebook_delete_confirm_title">Delete notebook</string>
    <string name="notebook_delete_confirm_message_spec">Notebook \"%1$s\" and all of its pages will be permanently deleted from this device.</string>
    <string name="notebook_delete_confirm_cancel">Cancel</string>
    <string name="notebook_delete_confirm_delete">Delete</string>

    <!-- NotePage delete confirmation -->
    <string name="notepage_delete_confirm_title">Delete page</string>
    <string name="notepage_delete_confirm_message">This page will be permanently deleted from this device.</string>
    <string name="notepage_delete_confirm_cancel">Cancel</string>
    <string name="notepage_delete_confirm_delete">Delete</string>

    <!-- Note activity -->
    <string name="action_pen">Pen</string>
    <string name="action_select">Select</string>
    <string name="action_add_page">Add page</string>
    <string name="action_previous_page">Previous page</string>
    <string name="action_next_page">Next page</string>
    <string name="action_delete_page">Delete page</string>
    <string name="action_share_page">Share page</string>
    <string name="action_background">Background</string>

    <!-- Background texts -->
    <string name="background_text_grid">Grid</string>
    <string name="background_text_empty">None</string>
</resources>
